force-app/main/default/objects/Form_Page__c/Form_Page__c.object-meta.xml
<CustomObject>
    <label>Form Page</label>
    <nameField>
        <displayFormat>FP-{000000}</displayFormat>
        <label>Form Page</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>