force-app/main/default/objects/Form_Page__c/fields/Display_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Display_Page_Title__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Page Title</label>
    <type>Checkbox</type>
</CustomField>