force-app/main/default/objects/Form_Page__c/fields/Font_Style__c.field-meta.xml
<CustomField>
    <fullName>Font_Style__c</fullName>
    <label>Font Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>h1</fullName>
            </value>
            <value>
                <fullName>h2</fullName>
            </value>
            <value>
                <fullName>h3</fullName>
            </value>
            <value>
                <fullName>h4</fullName>
            </value>
            <value>
                <fullName>h5</fullName>
            </value>
            <value>
                <fullName>h6</fullName>
            </value>
            <value>
                <fullName>p</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>